Fix bug where options are not visible when clicking replace image.
This is a more specific approach to fixing #28604, targeting only the popover in question.

--- a/packages/block-editor/src/components/media-replace-flow/style.scss
+++ b/packages/block-editor/src/components/media-replace-flow/style.scss
@@ -11,6 +11,11 @@
 	padding-top: $grid-unit-20;
 }
 
+// Prevents the popover content from being scrolled out of view.
+.block-editor-media-replace-flow__options .components-popover__content {
+	overflow-y: unset;
+}
+
 .block-editor-media-replace-flow__indicator {
 	margin-left: 4px;
 }
